[google][firebase] Added Firebase Core to all bindings, samples and component.yaml Also, bumped all versions

--- a/Firebase.CloudMessaging/samples/CloudMessagingSample/CloudMessagingSample/CloudMessagingSample.csproj
+++ b/Firebase.CloudMessaging/samples/CloudMessagingSample/CloudMessagingSample/CloudMessagingSample.csproj
@@ -129,11 +129,16 @@
       <Project>{21448321-F58E-4F74-B9B2-9704651FF5E9}</Project>
       <Name>Firebase.CloudMessaging</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\..\Firebase.Core\source\Firebase.Core\Firebase.Core.csproj">
+      <Project>{0AD1ED63-C008-41B3-8ADB-04696B4880E3}</Project>
+      <Name>Firebase.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="GoogleService-Info.plist" />
   </ItemGroup>
   <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Firebase.InstanceID\source\Firebase.InstanceID\Firebase.InstanceID.targets" />
+  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Firebase.Core\source\Firebase.Core\Firebase.Core.targets" />
   <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Firebase.Analytics\source\Firebase.Analytics\Firebase.Analytics.targets" />
   <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Firebase.CloudMessaging\source\Firebase.CloudMessaging\Firebase.CloudMessaging.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
