--- a/Firebase.Database/component/component.yaml
+++ b/Firebase.Database/component/component.yaml
@@ -1,4 +1,4 @@
-version: 3.0.3.0
+version: 3.0.3.1
 name: Firebase Database for iOS
 id: firebaseiosdatabase
 publisher: Xamarin Inc.
@@ -13,11 +13,12 @@ libraries:
   ios-unified: 
     - ../output/Firebase.Database.dll
     - ../../Firebase.Analytics/output/Firebase.Analytics.dll
+    - ../../Firebase.Core/output/Firebase.Core.dll
     - ../../Firebase.InstanceID/output/Firebase.InstanceID.dll
 is_shell: true
 packages:
   ios-unified:
-    - Xamarin.Firebase.iOS.Database, Version=3.0.3.0
+    - Xamarin.Firebase.iOS.Database, Version=3.0.3.1
 samples:
   - name: "Database Sample"
     path: ../samples/DatabaseSample/DatabaseSample.sln
@@ -25,17 +26,20 @@ samples:
       - Firebase.Database
       - Firebase.Auth
       - Firebase.Analytics
+      - Firebase.Core
       - Firebase.InstanceID
     installNuGets:
       - project: DatabaseSample
         packages:
           - Xamarin.Firebase.iOS.Database
           - Xamarin.Firebase.iOS.Analytics
+          - Xamarin.Firebase.iOS.Core
           - Xamarin.Firebase.iOS.InstanceID
     removeNodes:
       - "//xNS:Import[contains (@Project, 'Firebase.Database.targets')]"
       - "//xNS:Import[contains (@Project, 'Firebase.Auth.targets')]"
       - "//xNS:Import[contains (@Project, 'Firebase.Analytics.targets')]"
+      - "//xNS:Import[contains (@Project, 'Firebase.Core.targets')]"
       - "//xNS:Import[contains (@Project, 'Firebase.InstanceID.targets')]"
 local-nuget-repo: ../../tmp-nugets
 no_build: true
