--- a/Firebase.Database/samples/DatabaseSample/DatabaseSample/DatabaseSample.csproj
+++ b/Firebase.Database/samples/DatabaseSample/DatabaseSample/DatabaseSample.csproj
@@ -154,11 +154,16 @@
       <Project>{B6D38028-B1CF-4351-B53B-B5D35F19FC4A}</Project>
       <Name>Firebase.Auth</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\..\Firebase.Core\source\Firebase.Core\Firebase.Core.csproj">
+      <Project>{0AD1ED63-C008-41B3-8ADB-04696B4880E3}</Project>
+      <Name>Firebase.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="GoogleService-Info.plist" />
   </ItemGroup>
   <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Firebase.InstanceID\source\Firebase.InstanceID\Firebase.InstanceID.targets" />
+  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Firebase.Core\source\Firebase.Core\Firebase.Core.targets" />
   <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Firebase.Analytics\source\Firebase.Analytics\Firebase.Analytics.targets" />
   <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Firebase.Auth\source\Firebase.Auth\Firebase.Auth.targets" />
   <Import Project="$(MSBuildThisFileDirectory)..\..\..\source\Firebase.Database\Firebase.Database.targets" />
