--- a/Firebase.DynamicLinks/samples/DynamicLinksSample/DynamicLinksSample/DynamicLinksSample.csproj
+++ b/Firebase.DynamicLinks/samples/DynamicLinksSample/DynamicLinksSample/DynamicLinksSample.csproj
@@ -138,6 +138,10 @@
       <Project>{44E2D44F-2072-4885-AA39-1C4DD5E65E5C}</Project>
       <Name>Firebase.DynamicLinks</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\..\Firebase.Core\source\Firebase.Core\Firebase.Core.csproj">
+      <Project>{0AD1ED63-C008-41B3-8ADB-04696B4880E3}</Project>
+      <Name>Firebase.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="GoogleService-Info.plist" />
@@ -145,6 +149,7 @@
     <BundleResource Include="Resources\XamarinLogo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Firebase.InstanceID\source\Firebase.InstanceID\Firebase.InstanceID.targets" />
+  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Firebase.Core\source\Firebase.Core\Firebase.Core.targets" />
   <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Firebase.Analytics\source\Firebase.Analytics\Firebase.Analytics.targets" />
   <Import Project="$(MSBuildThisFileDirectory)..\..\..\source\Firebase.DynamicLinks\Firebase.DynamicLinks.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
