--- a/Firebase.Invites/source/Firebase.Invites/Firebase.Invites.csproj
+++ b/Firebase.Invites/source/Firebase.Invites/Firebase.Invites.csproj
@@ -67,6 +67,10 @@
       <Project>{3C142652-0DF6-4919-9F58-0FD8FA3A9F6D}</Project>
       <Name>Google.SignIn</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\Firebase.Core\source\Firebase.Core\Firebase.Core.csproj">
+      <Project>{0AD1ED63-C008-41B3-8ADB-04696B4880E3}</Project>
+      <Name>Firebase.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="Firebase.Invites.targets" />
