--- a/Firebase.RemoteConfig/component/component.yaml
+++ b/Firebase.RemoteConfig/component/component.yaml
@@ -1,4 +1,4 @@
-version: 1.3.0.0
+version: 1.3.0.1
 name: Firebase Remote Config for iOS
 id: firebaseiosremoteconfig
 publisher: Xamarin Inc.
@@ -13,11 +13,12 @@ libraries:
   ios-unified: 
     - ../output/Firebase.RemoteConfig.dll
     - ../../Firebase.Analytics/output/Firebase.Analytics.dll
+    - ../../Firebase.Core/output/Firebase.Core.dll
     - ../../Firebase.InstanceID/output/Firebase.InstanceID.dll
 is_shell: true
 packages:
   ios-unified:
-    - Xamarin.Firebase.iOS.RemoteConfig, Version=1.3.0.0
+    - Xamarin.Firebase.iOS.RemoteConfig, Version=1.3.0.1
     - Xamarin.Firebase.iOS.Analytics, Version=3.4.2.0
     - Xamarin.Firebase.iOS.InstanceID, Version=1.0.8.0
 samples:
@@ -26,16 +27,19 @@ samples:
     removeProjects: 
       - Firebase.RemoteConfig
       - Firebase.Analytics
+      - Firebase.Core
       - Firebase.InstanceID
     installNuGets:
       - project: RemoteConfigSample
         packages:
           - Xamarin.Firebase.iOS.RemoteConfig
           - Xamarin.Firebase.iOS.Analytics
+          - Xamarin.Firebase.iOS.Core
           - Xamarin.Firebase.iOS.InstanceID
     removeNodes:
       - "//xNS:Import[contains (@Project, 'Firebase.RemoteConfig.targets')]"
       - "//xNS:Import[contains (@Project, 'Firebase.Analytics.targets')]"
+      - "//xNS:Import[contains (@Project, 'Firebase.Core.targets')]"
       - "//xNS:Import[contains (@Project, 'Firebase.InstanceID.targets')]"
 local-nuget-repo: ../../tmp-nugets
 no_build: true
