--- a/Firebase.AdMob/externals/Podfile
+++ b/Firebase.AdMob/externals/Podfile
@@ -1,24 +1,28 @@
 =begin
 Last run Firebase/AdMob installed:
-- FirebaseAnalytics (3.4.2)
+- FirebaseAnalytics (3.5.1)
+- FirebaseCore (3.4.4)
 - FirebaseInstanceID (1.0.8)
-- GoogleInterchangeUtilities (1.2.1)
-- GoogleSymbolUtilities (1.1.1)
-- GoogleUtilities (1.3.1)
-- Google-Mobile-Ads-SDK (7.11.0)
+- GoogleInterchangeUtilities (1.2.2)
+- GoogleSymbolUtilities (1.1.2)
+- Google-Mobile-Ads-SDK (7.13.0)
+- GoogleToolboxForMac (2.1.0)
 
 Check if main version or subversion number has changed. 
 If yes, please, update *.targets files located in binding 
 projects, also, update Podfile files if needed.
 
 In .targets file, located in Google.MobileAds binding, you can find:
-- Google-Mobile-Ads-SDK (7.11.0)
+- Google-Mobile-Ads-SDK (7.13.0)
 
 In .targets file, located in Firebase.Analytics binding, you can find:
-- FirebaseAnalytics (3.4.2)
-- GoogleInterchangeUtilities (1.2.1)
-- GoogleSymbolUtilities (1.1.1)
-- GoogleUtilities (1.3.1)
+- FirebaseAnalytics (3.5.1)
+- GoogleInterchangeUtilities (1.2.2)
+- GoogleSymbolUtilities (1.1.2)
+
+In .targets file, located in Firebase.Core binding, you can find:
+- FirebaseCore (3.4.4)
+- GoogleToolboxForMac (2.1.0)
 
 In .targets file, located in Firebase.InstanceID binding, you can find:
 - FirebaseInstanceID (1.0.8)
@@ -30,5 +34,5 @@ platform :ios, '7.0'
 install! 'cocoapods', :integrate_targets => false
 
 target 'FirebaseAdMob' do
-	pod 'Firebase/AdMob', '3.6.0'
+	pod 'Firebase/AdMob', '3.8.0'
 end
