--- a/Firebase.Auth/externals/Podfile
+++ b/Firebase.Auth/externals/Podfile
@@ -1,26 +1,32 @@
 =begin
 Last run FirebaseAuth installed:
-- FirebaseAnalytics (3.4.2)
-- FirebaseAuth (3.0.5)
+- FirebaseAnalytics (3.5.1)
+- FirebaseAuth (3.0.6)
+- FirebaseCore (3.4.4)
 - FirebaseInstanceID (1.0.8)
-- GoogleInterchangeUtilities (1.2.1)
-- GoogleNetworkingUtilities (1.2.1)
-- GoogleSymbolUtilities (1.1.1)
-- GoogleUtilities (1.3.1)
+- GTMSessionFetcher (1.1.7)
+- GoogleInterchangeUtilities (1.2.2)
+- GoogleNetworkingUtilities (1.2.2)
+- GoogleSymbolUtilities (1.1.2)
+- GoogleToolboxForMac (2.1.0)
 
 Check if main version or subversion number has changed. 
 If yes, please, update *.targets files located in binding 
 projects, also, update Podfile files if needed.
 
 In .targets file, located in Firebase.Auth binding, you can find:
-- FirebaseAuth (3.0.5)
+- FirebaseAuth (3.0.6)
 - GoogleNetworkingUtilities (1.2.1)
 
 In .targets file, located in Firebase.Analytics binding, you can find:
-- FirebaseAnalytics (3.4.2)
-- GoogleInterchangeUtilities (1.2.1)
-- GoogleSymbolUtilities (1.1.1)
-- GoogleUtilities (1.3.1)
+- FirebaseAnalytics (3.5.1)
+- GoogleInterchangeUtilities (1.2.2)
+- GoogleSymbolUtilities (1.1.2)
+
+In .targets file, located in Firebase.Core binding, you can find:
+- FirebaseCore (3.4.4)
+- GoogleToolboxForMac (2.1.0)
+- GTMSessionFetcher (1.1.7)
 
 In .targets file, located in Firebase.InstanceID binding, you can find:
 - FirebaseInstanceID (1.0.8)
@@ -32,5 +38,5 @@ platform :ios, '7.0'
 install! 'cocoapods', :integrate_targets => false
 
 target 'FirebaseAuth' do
-	pod 'FirebaseAuth', '3.0.5'
+	pod 'Firebase/Auth', '3.8.0'
 end
