--- a/Firebase.Auth/source/Firebase.Auth/Firebase.Auth.targets
+++ b/Firebase.Auth/source/Firebase.Auth/Firebase.Auth.targets
@@ -3,17 +3,12 @@
 
 	<PropertyGroup>
 		<_FirebaseAuthAssemblyName>Firebase.Auth, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseAuthAssemblyName>
-		<_FirebaseAuthItemsFolder>FAth-3.0.5</_FirebaseAuthItemsFolder>
-		<_GoogleNetworkingUtilitiesItemsFolder>GNtwrkngU-1.2.1</_GoogleNetworkingUtilitiesItemsFolder>
+		<_FirebaseAuthItemsFolder>FAth-3.0.6</_FirebaseAuthItemsFolder>
 	</PropertyGroup>
 
 	<ItemGroup Condition="'$(OutputType)'!='Library'">
 		<XamarinBuildDownload Include="$(_FirebaseAuthItemsFolder)">
-			<Url>https://www.gstatic.com/cpdc/8e158ec1f7a46595/FirebaseAuth-3.0.5.tar.gz</Url>
-			<Kind>Tgz</Kind>
-		</XamarinBuildDownload>
-		<XamarinBuildDownload Include="$(_GoogleNetworkingUtilitiesItemsFolder)">
-			<Url>https://www.gstatic.com/cpdc/9a35b867a7ad8af0-GoogleNetworkingUtilities-1.2.1.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/c3b1d3ce85311140/FirebaseAuth-3.0.6.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildRestoreResources Include="_FirebaseAuthItems"/>
@@ -23,16 +18,11 @@
 
 		<PropertyGroup>
 			<_FirebaseAuthSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseAuthItemsFolder)\Frameworks\frameworks\</_FirebaseAuthSDKBaseFolder>
-			<_GoogleNetworkingUtilitiesSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleNetworkingUtilitiesItemsFolder)\Frameworks\</_GoogleNetworkingUtilitiesSDKBaseFolder>
 		</PropertyGroup>
 
 		<ItemGroup>
 			<RestoreAssemblyResource Include="$(_FirebaseAuthSDKBaseFolder)FirebaseAuth.framework\FirebaseAuth">
 				<LogicalName>FirebaseAuth</LogicalName>
-				<AssemblyName>$(_FirebaseAuthAssemblyName)</AssemblyName>
-			</RestoreAssemblyResource>
-			<RestoreAssemblyResource Include="$(_GoogleNetworkingUtilitiesSDKBaseFolder)GoogleNetworkingUtilities.framework\GoogleNetworkingUtilities">
-				<LogicalName>GoogleNetworkingUtilities</LogicalName>
 				<AssemblyName>$(_FirebaseAuthAssemblyName)</AssemblyName>
 			</RestoreAssemblyResource>
 		</ItemGroup>
