--- a/Firebase.Database/source/Firebase.Database/Firebase.Database.targets
+++ b/Firebase.Database/source/Firebase.Database/Firebase.Database.targets
@@ -3,12 +3,12 @@
 
 	<PropertyGroup>
 		<_FirebaseDatabaseAssemblyName>Firebase.Database, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseDatabaseAssemblyName>
-		<_FirebaseDatabaseItemsFolder>FDtbs-3.0.3</_FirebaseDatabaseItemsFolder>
+		<_FirebaseDatabaseItemsFolder>FDtbs-3.1.0</_FirebaseDatabaseItemsFolder>
 	</PropertyGroup>
 
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_FirebaseDatabaseItemsFolder)">
-			<Url>https://www.gstatic.com/cpdc/dd2185c8104bac0e/FirebaseDatabase-3.0.3.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/1e3900e14edb8ce1/FirebaseDatabase-3.1.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildRestoreResources Include="_FirebaseDatabaseItems"/>
