--- a/Firebase.DynamicLinks/externals/Podfile
+++ b/Firebase.DynamicLinks/externals/Podfile
@@ -1,11 +1,12 @@
 =begin
 Last run FirebaseDynamicLinks installed:
-- FirebaseAnalytics (3.4.2)
-- FirebaseDynamicLinks (1.3.0)
+- FirebaseAnalytics (3.5.1)
+- FirebaseCore (3.4.4)
+- FirebaseDynamicLinks (1.3.1)
 - FirebaseInstanceID (1.0.8)
-- GoogleInterchangeUtilities (1.2.1)
-- GoogleSymbolUtilities (1.1.1)
-- GoogleUtilities (1.3.1)
+- GoogleInterchangeUtilities (1.2.2)
+- GoogleSymbolUtilities (1.1.2)
+- GoogleToolboxForMac (2.1.0)
 
 Check if main version or subversion number has changed. 
 If yes, please, update *.targets files located in binding 
@@ -15,10 +16,13 @@ In .targets file, located in Firebase.DynamicLinks binding, you can find:
 - FirebaseDynamicLinks (1.3.0)
 
 In .targets file, located in Firebase.Analytics binding, you can find:
-- FirebaseAnalytics (3.4.2)
-- GoogleInterchangeUtilities (1.2.1)
-- GoogleSymbolUtilities (1.1.1)
-- GoogleUtilities (1.3.1)
+- FirebaseAnalytics (3.5.1)
+- GoogleInterchangeUtilities (1.2.2)
+- GoogleSymbolUtilities (1.1.2)
+
+In .targets file, located in Firebase.Core binding, you can find:
+- FirebaseCore (3.4.4)
+- GoogleToolboxForMac (2.1.0)
 
 In .targets file, located in Firebase.InstanceID binding, you can find:
 - FirebaseInstanceID (1.0.8)
@@ -30,5 +34,5 @@ platform :ios, '7.0'
 install! 'cocoapods', :integrate_targets => false
 
 target 'FirebaseDynamicLinks' do
-	pod 'FirebaseDynamicLinks', '1.3.0'
+	pod 'Firebase/DynamicLinks', '3.8.0'
 end
