--- a/Firebase.DynamicLinks/source/Firebase.DynamicLinks/Firebase.DynamicLinks.targets
+++ b/Firebase.DynamicLinks/source/Firebase.DynamicLinks/Firebase.DynamicLinks.targets
@@ -2,11 +2,11 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_FirebaseDynamicLinksAssemblyName>Firebase.DynamicLinks, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseDynamicLinksAssemblyName>
-		<_FirebaseDynamicLinksItemsFolder>FDynmcL-1.3.0</_FirebaseDynamicLinksItemsFolder>
+		<_FirebaseDynamicLinksItemsFolder>FDynmcL-1.3.1</_FirebaseDynamicLinksItemsFolder>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_FirebaseDynamicLinksItemsFolder)">
-			<Url>https://www.gstatic.com/cpdc/17ed66cefeb35c5d/FirebaseDynamicLinks-1.3.0.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/b1346575f26c5869/FirebaseDynamicLinks-1.3.1.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildRestoreResources Include="_FirebaseDynamicLinksItems" />
