--- a/Google.SignIn/externals/Podfile
+++ b/Google.SignIn/externals/Podfile
@@ -1,37 +1,37 @@
 =begin
 Last run GoogleSignIn installed:
-- FirebaseAnalytics (3.2.1)
-- FirebaseInstanceID (1.0.7)
-- Google (3.0.3)
-- GoogleAppUtilities (1.1.1)
-- GoogleAuthUtilities (2.0.1)
-- GoogleInterchangeUtilities (1.2.1)
-- GoogleNetworkingUtilities (1.2.1)
-- GoogleSignIn (4.0.0)
-- GoogleSymbolUtilities (1.1.1)
-- GoogleUtilities (1.3.1)
+- FirebaseAnalytics (3.5.1)
+- FirebaseCore (3.4.4)
+- FirebaseInstanceID (1.0.8)
+- GTMOAuth2 (1.1.4)
+- GTMSessionFetcher (1.1.7)
+- GoogleAppUtilities (1.1.2)
+- GoogleInterchangeUtilities (1.2.2)
+- GoogleSignIn (4.0.1)
+- GoogleSymbolUtilities (1.1.2)
+- GoogleToolboxForMac (2.1.0)
 
 Check if main version or subversion number has changed. 
 If yes, please, update *.targets files located in binding 
 projects, also, update Podfile files if needed.
 
 In .targets file, located in Google.SignIn binding, you can find:
-- GoogleSignIn (4.0.0)
-- GoogleNetworkingUtilities (1.2.1)
-- GoogleAppUtilities (1.1.1)
-- GoogleAuthUtilities (2.0.1)
-
-In .targets file, located in Google.Core binding, you can find:
-- Google (3.0.3)
+- GoogleSignIn (4.0.1)
+- GTMOAuth2 (1.1.4)
+- GoogleAppUtilities (1.1.2)
 
 In .targets file, located in Firebase.Analytics binding, you can find:
-- FirebaseAnalytics (3.2.1)
-- GoogleInterchangeUtilities (1.2.1)
-- GoogleSymbolUtilities (1.1.1)
-- GoogleUtilities (1.3.1)
+- FirebaseAnalytics (3.5.1)
+- GoogleInterchangeUtilities (1.2.2)
+- GoogleSymbolUtilities (1.1.2)
+
+In .targets file, located in Firebase.Core binding, you can find:
+- FirebaseCore (3.4.4)
+- GoogleToolboxForMac (2.1.0)
+- GTMSessionFetcher (1.1.7)
 
 In .targets file, located in Firebase.InstanceID binding, you can find:
-- FirebaseInstanceID (1.0.7)
+- FirebaseInstanceID (1.0.8)
 =end
 
 source 'https://github.com/CocoaPods/Specs.git'
@@ -40,6 +40,7 @@ platform :ios, '7.0'
 install! 'cocoapods', :integrate_targets => false
 
 target 'GoogleSignIn' do
-	pod 'GoogleSignIn',  '4.0.0'
+	pod 'GoogleSignIn',  '4.0.1'
 	pod 'Google/SignIn', '3.0.3'
+	pod 'Firebase/Core', '3.8.0'
 end
