--- a/Google.SignIn/samples/SignInExample/SignInExample/SignInExample.csproj
+++ b/Google.SignIn/samples/SignInExample/SignInExample/SignInExample.csproj
@@ -64,7 +64,7 @@
     <CodesignKey>iPhone Developer</CodesignKey>
     <MtouchDebug>true</MtouchDebug>
     <MtouchExtraArgs>-v -v -v</MtouchExtraArgs>
-    <MtouchFastDev>true</MtouchFastDev>
+    <MtouchFastDev>false</MtouchFastDev>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -98,10 +98,6 @@
   <Import Project="..\packages\Xamarin.Build.Download.0.2.2\build\Xamarin.Build.Download.targets" Condition="Exists('..\packages\Xamarin.Build.Download.0.2.2\build\Xamarin.Build.Download.targets')" />
   <Import Project="..\packages\Xamarin.Build.Download.0.2.2\build\Xamarin.Build.Download.props" Condition="Exists('..\packages\Xamarin.Build.Download.0.2.2\build\Xamarin.Build.Download.props')" />
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Google.Core\source\Google.Core\Google.Core.csproj">
-      <Project>{C2355333-621E-4439-9F53-EB717D681699}</Project>
-      <Name>Google.Core</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\..\source\Google.SignIn\Google.SignIn.csproj">
       <Project>{3C142652-0DF6-4919-9F58-0FD8FA3A9F6D}</Project>
       <Name>Google.SignIn</Name>
@@ -117,6 +113,10 @@
     <ProjectReference Include="..\..\..\..\Firebase.Core\source\Firebase.Core\Firebase.Core.csproj">
       <Project>{0AD1ED63-C008-41B3-8ADB-04696B4880E3}</Project>
       <Name>Firebase.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\Google.Core\source\Google.Core\Google.Core.csproj">
+      <Project>{C2355333-621E-4439-9F53-EB717D681699}</Project>
+      <Name>Google.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
