--- a/Google.SignIn/source/Google.SignIn/Google.SignIn.csproj
+++ b/Google.SignIn/source/Google.SignIn/Google.SignIn.csproj
@@ -52,10 +52,6 @@
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.ObjCBinding.CSharp.targets" />
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Google.Core\source\Google.Core\Google.Core.csproj">
-      <Project>{C2355333-621E-4439-9F53-EB717D681699}</Project>
-      <Name>Google.Core</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\..\Firebase.InstanceID\source\Firebase.InstanceID\Firebase.InstanceID.csproj">
       <Project>{D6AA184C-DA45-4BBB-988A-451B20C7B804}</Project>
       <Name>Firebase.InstanceID</Name>
@@ -68,8 +64,17 @@
       <Project>{0AD1ED63-C008-41B3-8ADB-04696B4880E3}</Project>
       <Name>Firebase.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\Google.Core\source\Google.Core\Google.Core.csproj">
+      <Project>{C2355333-621E-4439-9F53-EB717D681699}</Project>
+      <Name>Google.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="Google.SignIn.targets" />
+  </ItemGroup>
+  <ItemGroup>
+    <ObjcBindingNativeLibrary Include="..\..\externals\GTMOAuth2">
+      <Link>GTMOAuth2</Link>
+    </ObjcBindingNativeLibrary>
   </ItemGroup>
 </Project>
