--- a/Firebase.Invites/externals/Podfile
+++ b/Firebase.Invites/externals/Podfile
@@ -1,46 +1,50 @@
 =begin
 Last run FirebaseInvites installed:
-- Firebase (3.6.0)
-- FirebaseAnalytics (3.4.2)
-- FirebaseDynamicLinks (1.3.0)
+- FirebaseAnalytics (3.5.1)
+- FirebaseCore (3.4.4)
+- FirebaseDynamicLinks (1.3.1)
 - FirebaseInstanceID (1.0.8)
-- FirebaseInvites (1.2.1)
-- GoogleAppUtilities (1.1.1)
-- GoogleAuthUtilities (2.0.1)
-- GoogleInterchangeUtilities (1.2.1)
-- GoogleNetworkingUtilities (1.2.1)
-- GoogleParsingUtilities (1.1.1)
-- GooglePlusUtilities (1.1.1)
-- GoogleSignIn (4.0.0)
-- GoogleSymbolUtilities (1.1.1)
-- GoogleUtilities (1.3.1)
+- FirebaseInvites (1.2.2)
+- GTMOAuth2 (1.1.4)
+- GTMSessionFetcher (1.1.7)
+- GoogleAppUtilities (1.1.2)
+- GoogleInterchangeUtilities (1.2.2)
+- GoogleNetworkingUtilities (1.2.2)
+- GoogleParsingUtilities (1.1.2)
+- GooglePlusUtilities (1.1.2)
+- GoogleSignIn (4.0.1)
+- GoogleSymbolUtilities (1.1.2)
+- GoogleToolboxForMac (2.1.0)
 
 Check if main version or subversion number has changed. 
 If yes, please, update *.targets files located in binding 
 projects, also, update Podfile files if needed.
 
 In .targets file, located in Firebase.Invites binding, you can find:
-- FirebaseInvites (1.2.1)
-- GoogleParsingUtilities (1.1.1)
-- GooglePlusUtilities (1.1.1)
-
-In .targets file, located in Firebase.DynamicLinks binding, you can find:
--  FirebaseDynamicLinks (1.3.0)
+- FirebaseInvites (1.2.2)
+- GoogleParsingUtilities (1.1.2)
+- GooglePlusUtilities (1.1.2)
 
 In .targets file, located in Google.SignIn binding, you can find:
-- GoogleSignIn (4.0.0)
-- GoogleNetworkingUtilities (1.2.1)
-- GoogleAppUtilities (1.1.1)
-- GoogleAuthUtilities (2.0.1)
+- GoogleSignIn (4.0.1)
+- GTMOAuth2 (1.1.4)
+- GoogleAppUtilities (1.1.2)
 
 In .targets file, located in Google.Core binding, you can find:
 - Google (3.0.3)
 
+In .targets file, located in Firebase.DynamicLinks binding, you can find:
+-  FirebaseDynamicLinks (1.3.1)
+
 In .targets file, located in Firebase.Analytics binding, you can find:
-- FirebaseAnalytics (3.4.2)
-- GoogleInterchangeUtilities (1.2.1)
-- GoogleSymbolUtilities (1.1.1)
-- GoogleUtilities (1.3.1)
+- FirebaseAnalytics (3.5.1)
+- GoogleInterchangeUtilities (1.2.2)
+- GoogleSymbolUtilities (1.1.2)	
+
+In .targets file, located in Firebase.Core binding, you can find:
+- FirebaseCore (3.4.4)
+- GoogleToolboxForMac (2.1.0)
+- GTMSessionFetcher (1.1.7)
 
 In .targets file, located in Firebase.InstanceID binding, you can find:
 - FirebaseInstanceID (1.0.8)
@@ -52,6 +56,5 @@ platform :ios, '7.0'
 install! 'cocoapods', :integrate_targets => false
 
 target 'FirebaseInvites' do
-	pod 'FirebaseInvites', '1.2.1'
-	pod 'Firebase/Invites', '3.6.0'
+	pod 'Firebase/Invites', '3.8.0'
 end
