--- a/Firebase.RemoteConfig/source/Firebase.RemoteConfig/Firebase.RemoteConfig.targets
+++ b/Firebase.RemoteConfig/source/Firebase.RemoteConfig/Firebase.RemoteConfig.targets
@@ -2,16 +2,11 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_FirebaseRemoteConfigAssemblyName>Firebase.RemoteConfig, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseRemoteConfigAssemblyName>
-		<_FirebaseRemoteConfigItemsFolder>FRmtC-1.3.0</_FirebaseRemoteConfigItemsFolder>
-		<_GoogleIPhoneUtilitiesItemsFolder>GIPhnU-1.2.1</_GoogleIPhoneUtilitiesItemsFolder>
+		<_FirebaseRemoteConfigItemsFolder>FRmtC-1.3.1</_FirebaseRemoteConfigItemsFolder>
 	</PropertyGroup>
 	<ItemGroup Condition="'$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True'">
 		<XamarinBuildDownload Include="$(_FirebaseRemoteConfigItemsFolder)">
-			<Url>https://www.gstatic.com/cpdc/beaa3b609041eec7/FirebaseRemoteConfig-1.3.0.tar.gz</Url>
-			<Kind>Tgz</Kind>
-		</XamarinBuildDownload>
-		<XamarinBuildDownload Include="$(_GoogleIPhoneUtilitiesItemsFolder)">
-			<Url>https://www.gstatic.com/cpdc/d6579239fea27cae-GoogleIPhoneUtilities-1.2.1.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/7340195370ef76ea/FirebaseRemoteConfig-1.3.1.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildRestoreResources Include="_FirebaseRemoteConfigItems" />
@@ -20,16 +15,11 @@
 
 		<PropertyGroup>
 			<_FirebaseRemoteConfigSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseRemoteConfigItemsFolder)\Frameworks\frameworks\</_FirebaseRemoteConfigSDKBaseFolder>
-			<_GoogleIPhoneUtilitiesSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleIPhoneUtilitiesItemsFolder)\Frameworks\</_GoogleIPhoneUtilitiesSDKBaseFolder>
 		</PropertyGroup>
 
 		<ItemGroup>
 			<RestoreAssemblyResource Include="$(_FirebaseRemoteConfigSDKBaseFolder)FirebaseRemoteConfig.framework\FirebaseRemoteConfig">
 				<LogicalName>FirebaseRemoteConfig</LogicalName>
-				<AssemblyName>$(_FirebaseRemoteConfigAssemblyName)</AssemblyName>
-			</RestoreAssemblyResource>
-			<RestoreAssemblyResource Include="$(_GoogleIPhoneUtilitiesSDKBaseFolder)GoogleIPhoneUtilities.framework\GoogleIPhoneUtilities">
-				<LogicalName>GoogleIPhoneUtilities</LogicalName>
 				<AssemblyName>$(_FirebaseRemoteConfigAssemblyName)</AssemblyName>
 			</RestoreAssemblyResource>
 		</ItemGroup>
