--- a/manifest.yaml
+++ b/manifest.yaml
@@ -82,10 +82,10 @@
   BuildScript: ./Google.Maps/build.cake
   TriggerPaths: [ Google.Maps ]
   MacBuildTargets: [ samples, component ]
-- Name: Google.iOS.PlayGames
-  BuildScript: ./Google.PlayGames/build.cake
-  TriggerPaths: [ Google.PlayGames ]
-  MacBuildTargets: [ samples, component ]
+# - Name: Google.iOS.PlayGames
+#   BuildScript: ./Google.PlayGames/build.cake
+#   TriggerPaths: [ Google.PlayGames ]
+#   MacBuildTargets: [ samples, component ]
 - Name: Google.iOS.TagManager
   BuildScript: ./Google.TagManager/build.cake
   TriggerPaths: [ Google.TagManager ]
