--- a/Firebase.Storage/component/component.yaml
+++ b/Firebase.Storage/component/component.yaml
@@ -31,8 +31,11 @@ samples:
       - project: StorageSample
         packages:
           - Xamarin.Firebase.iOS.Storage
+          - Xamarin.Firebase.iOS.Auth
+          - Xamarin.Firebase.iOS.Database
           - Xamarin.Firebase.iOS.Analytics
           - Xamarin.Firebase.iOS.InstanceID
+
     removeNodes:
       - "//xNS:Import[contains (@Project, 'Firebase.Storage.targets')]"
       - "//xNS:Import[contains (@Project, 'Firebase.Database.targets')]"
