Adding missing packages to component sample of Firebase.Database

--- a/Firebase.Database/component/component.yaml
+++ b/Firebase.Database/component/component.yaml
@@ -32,6 +32,7 @@ samples:
           - Xamarin.Firebase.iOS.Database
           - Xamarin.Firebase.iOS.Analytics
           - Xamarin.Firebase.iOS.InstanceID
+          - Xamarin.Firebase.iOS.Auth
     removeNodes:
       - "//xNS:Import[contains (@Project, 'Firebase.Database.targets')]"
       - "//xNS:Import[contains (@Project, 'Firebase.Auth.targets')]"
