Adding THIRD-PARTY-NOTICES file for Firebase.Storage

--- a/Firebase.Storage/nuget/Xamarin.Firebase.iOS.Storage.nuspec
+++ b/Firebase.Storage/nuget/Xamarin.Firebase.iOS.Storage.nuspec
@@ -22,5 +22,6 @@
 
     <!-- Add targets file for external native reference download -->
     <file src="source/Firebase.Storage/Firebase.Storage.targets" target="build/Xamarin.Firebase.iOS.Storage.targets"  />
+    <file src="External-Dependency-Info" target="THIRD-PARTY-NOTICES" />
   </files>
 </package>
