--- a/Firebase.Storage/component/component.yaml
+++ b/Firebase.Storage/component/component.yaml
@@ -43,4 +43,9 @@ samples:
       - "//xNS:Import[contains (@Project, 'Firebase.Analytics.targets')]"
       - "//xNS:Import[contains (@Project, 'Firebase.InstanceID.targets')]"
 local-nuget-repo: ../../tmp-nugets
+
+additional-files:
+  - source: "../External-Dependency-Info"
+    destination: "THIRD-PARTY-NOTICES"
+
 no_build: true
