Adding Third Party Notices for FirebaseCore and Google SignIn

--- a/Firebase.Core/nuget/Xamarin.Firebase.iOS.Core.nuspec
+++ b/Firebase.Core/nuget/Xamarin.Firebase.iOS.Core.nuspec
@@ -21,5 +21,6 @@
 
     <!-- Add targets file for external native reference download -->
     <file src="source/Firebase.Core/Firebase.Core.targets" target="build/Xamarin.Firebase.iOS.Core.targets"  />
+    <file src="External-Dependency-Info" target="THIRD-PARTY-NOTICES" />
   </files>
 </package>
