--- a/Firebase.Invites/externals/Podfile
+++ b/Firebase.Invites/externals/Podfile
@@ -1,17 +1,15 @@
 =begin
 Last run FirebaseInvites installed:
-- FirebaseAnalytics (3.5.1)
-- FirebaseCore (3.4.4)
-- FirebaseDynamicLinks (1.3.1)
+- FirebaseAnalytics (3.6.0)
+- FirebaseCore (3.4.5)
+- FirebaseDynamicLinks (1.3.2)
 - FirebaseInstanceID (1.0.8)
-- FirebaseInvites (1.2.2)
+- FirebaseInvites (1.2.3)
 - GTMOAuth2 (1.1.4)
 - GTMSessionFetcher (1.1.7)
+- GoogleAPIClientForREST (1.1.1)
 - GoogleAppUtilities (1.1.2)
 - GoogleInterchangeUtilities (1.2.2)
-- GoogleNetworkingUtilities (1.2.2)
-- GoogleParsingUtilities (1.1.2)
-- GooglePlusUtilities (1.1.2)
 - GoogleSignIn (4.0.1)
 - GoogleSymbolUtilities (1.1.2)
 - GoogleToolboxForMac (2.1.0)
@@ -21,9 +19,8 @@ If yes, please, update *.targets files located in binding
 projects, also, update Podfile files if needed.
 
 In .targets file, located in Firebase.Invites binding, you can find:
-- FirebaseInvites (1.2.2)
-- GoogleParsingUtilities (1.1.2)
-- GooglePlusUtilities (1.1.2)
+- FirebaseInvites (1.2.3)
+- GoogleAPIClientForREST (1.1.1)
 
 In .targets file, located in Google.SignIn binding, you can find:
 - GoogleSignIn (4.0.1)
@@ -34,17 +31,17 @@ In .targets file, located in Google.Core binding, you can find:
 - Google (3.0.3)
 
 In .targets file, located in Firebase.DynamicLinks binding, you can find:
--  FirebaseDynamicLinks (1.3.1)
+-  FirebaseDynamicLinks (1.3.2)
 
 In .targets file, located in Firebase.Analytics binding, you can find:
-- FirebaseAnalytics (3.5.1)
-- GoogleInterchangeUtilities (1.2.2)
+- FirebaseAnalytics (3.6.0)
 - GoogleSymbolUtilities (1.1.2)	
 
 In .targets file, located in Firebase.Core binding, you can find:
-- FirebaseCore (3.4.4)
+- FirebaseCore (3.4.5)
 - GoogleToolboxForMac (2.1.0)
 - GTMSessionFetcher (1.1.7)
+- GoogleInterchangeUtilities (1.2.2)
 
 In .targets file, located in Firebase.InstanceID binding, you can find:
 - FirebaseInstanceID (1.0.8)
@@ -56,5 +53,5 @@ platform :ios, '7.0'
 install! 'cocoapods', :integrate_targets => false
 
 target 'FirebaseInvites' do
-	pod 'Firebase/Invites', '3.8.0'
+	pod 'Firebase/Invites', '3.10.0'
 end
