--- a/Firebase.Invites/source/Firebase.Invites/Firebase.Invites.csproj
+++ b/Firebase.Invites/source/Firebase.Invites/Firebase.Invites.csproj
@@ -78,5 +78,10 @@
   <ItemGroup>
     <Folder Include="Resources\" />
   </ItemGroup>
+  <ItemGroup>
+    <ObjcBindingNativeLibrary Include="..\..\externals\GoogleAPIClientForREST">
+      <Link>GoogleAPIClientForREST</Link>
+    </ObjcBindingNativeLibrary>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.ObjCBinding.CSharp.targets" />
 </Project>
