--- a/Firebase.CrashReporting/source/Firebase.CrashReporting/Firebase.CrashReporting.targets
+++ b/Firebase.CrashReporting/source/Firebase.CrashReporting/Firebase.CrashReporting.targets
@@ -2,11 +2,11 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_FirebaseCrashReportingAssemblyName>Firebase.CrashReporting, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseCrashReportingAssemblyName>
-		<_FirebaseCrashReportingItemsFolder>FCrshR-1.0.7</_FirebaseCrashReportingItemsFolder>
+		<_FirebaseCrashReportingItemsFolder>FCrshR-1.1.4</_FirebaseCrashReportingItemsFolder>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_FirebaseCrashReportingItemsFolder)">
-			<Url>https://www.gstatic.com/cpdc/a51b0e91cc93b3ed/FirebaseCrash-1.0.7.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/3802e848f39facac/FirebaseCrash-1.1.4.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildRestoreResources Include="_FirebaseCrashReportingItems" />
