--- a/Firebase.CloudMessaging/samples/CloudMessagingSample/CloudMessagingSample/CloudMessagingSample.csproj
+++ b/Firebase.CloudMessaging/samples/CloudMessagingSample/CloudMessagingSample/CloudMessagingSample.csproj
@@ -22,7 +22,7 @@
     <ConsolePause>false</ConsolePause>
     <CodesignKey>iPhone Developer</CodesignKey>
     <MtouchDebug>true</MtouchDebug>
-    <MtouchFastDev>true</MtouchFastDev>
+    <MtouchFastDev>false</MtouchFastDev>
     <MtouchProfiling>true</MtouchProfiling>
     <MtouchUseSGen>true</MtouchUseSGen>
     <MtouchUseRefCounting>true</MtouchUseRefCounting>
