--- a/Firebase.RemoteConfig/samples/RemoteConfigSample/RemoteConfigSample/RemoteConfigSample.csproj
+++ b/Firebase.RemoteConfig/samples/RemoteConfigSample/RemoteConfigSample/RemoteConfigSample.csproj
@@ -21,7 +21,7 @@
     <WarningLevel>4</WarningLevel>
     <CodesignKey>iPhone Developer</CodesignKey>
     <MtouchDebug>true</MtouchDebug>
-    <MtouchFastDev>true</MtouchFastDev>
+    <MtouchFastDev>false</MtouchFastDev>
     <MtouchProfiling>true</MtouchProfiling>
     <MtouchUseSGen>true</MtouchUseSGen>
     <MtouchUseRefCounting>true</MtouchUseRefCounting>
